--- a/requisites/style.css
+++ b/requisites/style.css
@@ -1,5 +1,5 @@
 /* Main Container */
-	.wp-auctions { background: url(logo.png) no-repeat left 2px; margin: 15px 15px 0 5px; padding: 40px 0 0 0; width: 90%; }
+	.wp-auctions { background: url(logo.png) no-repeat left 2px; margin: 15px 15px 0 5px; padding: 40px 0 30px 0; width: 90%; }
 	.wp-auctions .wrap { margin: 0; }
 	
 	.wp-auctions a { color: #21759b; font-weight: bold; text-decoration: none; }
@@ -39,7 +39,7 @@
 	h2.manage em { background: url(manage.png) no-repeat 5px top; font-style: normal; padding: 0 0 0 41px; }
 
 	h2.details { background: #fff url(/wp-admin/images/white-grad.png) repeat-x left bottom; border: 1px solid #ccc; font-style: normal; padding: 10px 5px; -webkit-border-top-left-radius: 5px; -webkit-border-top-right-radius: 5px; -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; }
-	h2.details em { background: url(details.png) no-repeat 5px top; font-style: normal; padding: 2px 0 2px 41px; }
+	h2.details em { background: url(details.png) no-repeat 5px 5px; font-style: normal; padding: 2px 0 2px 41px; }
 	
 	/* Get Started */
 	
@@ -62,7 +62,7 @@
 	.wp-auctions table.widefat select { border: 1px solid #bcaa97;  width: 100px; }
 	.wp-auctions table.widefat textarea { border: 1px solid #bcaa97; padding: 5px; width: 400px; }
 	
-	.wp-auctions p.submit { padding: 15px 0 30px; }
+	.wp-auctions p.submit { padding: 15px 0 0; }
 	.wp-auctions p.submit input { font-size: 15px !important; font-weight: bold; padding: 5px 10px; }
 
 	.options legend { color: #342224; font-size: 17px; font-weight: bold; padding: 8px 0 10px; }
@@ -72,5 +72,5 @@
 
 	#wpa-radio { width: 25px; }
 
-	.add-auction { padding: 15px 0 30px; }
+	.add-auction { padding: 15px 0 0; }
 	.add-auction input { font-size: 15px !important; font-weight: bold; padding: 5px 10px; }
