git-svn-id: https://plugins.svn.wordpress.org/wp-auctions/trunk@237988 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles/default/color.css
+++ b/styles/default/color.css
@@ -139,21 +139,21 @@ ol.wp-detailsbidders-p li:hover { color: #000; }
 .wpa-tabs { }
 .wpa-tabs ul { }
 	
-.pane { background: #fff; border-top: 1px solid #ccc; }
-.pane p { }
+.wpa-pane { background: #fff; border-top: 1px solid #ccc; }
+.wpa-pane p { }
 
-ul.tabs { background: #e9e9e9; border-bottom: 1px solid #fff; }
+ul.wpatabs { background: #e9e9e9; border-bottom: 1px solid #fff; }
 	
 /* Single Tab */
-ul.tabs li { background: #e9e9e9; border-left: 1px solid #fff; color: #999; }
+ul.wpatabs li { background: #e9e9e9; border-left: 1px solid #fff; color: #999; }
 	
 /* Tabs Link */
-ul.tabs li:hover { background: #ccc; color: #000; }
-ul.tabs a:active { }
-ul.tabs a:hover { background: #ddd; }
+ul.wpatabs li:hover { background: #ccc; color: #000; }
+ul.wpatabs a:active { }
+ul.wpatabs a:hover { background: #ddd; }
 
 /* Current Tab */
-ul.tabs li.current, ul.tabs li.current:hover, ul.tabs li.current { background: #ccc; color: #000; }
+ul.wpatabs li.current, ul.wpatabs li.current:hover, ul.wpatabs li.current { background: #ccc; color: #000; }
 
 /* Other Auctions */
 .pane-other { }
