--- a/styles/default/color.css
+++ b/styles/default/color.css
@@ -4,7 +4,7 @@ Style URL: http://www.wpauctions.com/styles
 Style Author: Hyder Jaffari
 Author URL: http://www.weborithm.com
 Get more styles at http://www.wpauctions.com/styles
-Last Update: May 18th, 2010
+Last Update: June 21st, 2009
 */
 
 /* Container */
@@ -43,7 +43,7 @@ Last Update: May 18th, 2010
 /* Other Auctions - This stuff is !IMPORTANT */
 
 #wp-other {	padding: 5px 0; }
-#wp-other ul, #wp-other ul li ul { padding: 5px 0 5px 10px !important; margin: 5px 0px 10px !important; border-top: 1px dotted #ccc !important;	border-bottom: 1px dotted #ccc !important; background: none !important; list-style: none !important; }
+#wp-other ul, #wp-other ul li ul { padding: 5px 0 5px 10px!important; margin: 5px 0px 10px !important; border-top: 1px dotted #ccc !important;	border-bottom: 1px dotted #ccc !important; background: none !important; list-style: none !important; }
 #wp-other ul li, #wp-other ul li ul li { padding: 1px 0 !important; margin: 0 !important; border: none !important; background:none !important; list-style: none !important; }
 #wp-other ul li a, #wp-other ul li ul li a { color: #0066CC !important; text-decoration: none !important; font: normal 11px Verdana, Arial, Helvetica, sans-serif !important; background: none !important; margin: 0px !important; padding: 0px !important; border: none !important; list-style: none !important; }
 #wp-other ul li a:hover, #wp-other ul li ul li a:hover { color: #5faaef !important; text-decoration: underline !important; font: normal 11px Verdana, Arial, Helvetica, sans-serif !important; margin: 0px !important; padding: 0px !important; border: none !important; }
@@ -55,25 +55,10 @@ Last Update: May 18th, 2010
 #wp-bidcontainerright { float:right; width: 45%; text-align:center; margin-right: 5px; font-size: 13px; }
 #wp-bidcontainerright a { color: #000 !important; text-decoration: none !important; }
 
-/* List Styling */
+/* 
 
-.wp-auction-hold { min-height: 57px; padding-top: 5px; }
-.wp-body-list { border-right: 1px solid #333; border-left: 1px solid #333; background: #fff; padding: 6px 4px 4px; border-bottom: 1px solid #333; }
-.wp-head-list { font-size: 15px; font-weight: bold; text-align: center; border-right: 1px solid #333; border-left: 1px solid #333; background: #fff url(../../requisites/gradient.gif) repeat-x left bottom; padding: 4px; border-top: 1px solid #303030; text-decoration: none; color: #333; margin: 0px; }
-.wp-heading-list { font-weight: bold; font-size: 12px; text-align: left; padding: 0; }
-.wp-desc-list {	padding: 4px 0;	margin: 0px; }
-.wp-desc-list p { padding: 0; }
-.wp-bidnow-list { text-align: center; padding: 4px 0; border-bottom: 1px solid #ccc; border-top: 1px solid #ccc; margin: 0px 0px 6px; background: #fff url(../../requisites/gradient.gif) repeat-x left bottom;	color: #333; }
-.wp-bidnow-list a { text-decoration: none !important; color: #333 !important; border: none !important; }
-.wp-bidnow-list a:hover { text-decoration: underline !important; }
+POPUP DEFAULT STYLE
 
-/* Popup Earth Style
-Style Name: Earth
-Style URL: http://www.wpauctions.com/styles
-Style Author: Hyder Jaffari
-Author URL: http://www.weborithm.com
-Get more styles at http://www.wpauctions.com/styles
-Last Update: May 2nd, 2010
 */
 
 /* Modal Box*/
@@ -105,18 +90,14 @@ Last Update: May 2nd, 2010
 
 /* Description */
 .wpa-description { background: #fff; border-right: 1px solid #ccc; }
-h3#tc-heading-p { }
+h3#tc-heading-p {  }
 #wp-description-p { }
 
 /* Action List */
-ul.wpa-details { background: #f3f3f3; }
-ul.wpa-details li { border-bottom: 1px solid #ccc; }
+ul.wpa-details { background: #f3f3f3; margin: 0 !important; }
+ul.wpa-details li { border-bottom: 1px solid #ccc; border-top: 1px solid #fff; }
 ul.wpa-details li strong { }
 ul.wpa-details div { border-top: 1px solid #fff; line-height: 25px !important; padding: 0 5px !important; }
-
-#wp_winningb img { background: #fff; border: 1px solid #ccc; }
-
-a.wpa-bin-price { background: #fff url(../../requisites/gradient.gif) repeat-x left -10px; border: 1px solid #aaa; }
 
 /* Bottom Area */
 #wp-bottom-p { border: 1px solid #ccc; border-top: 0; }
@@ -183,57 +164,3 @@ ul#wp-othercontainer-p li:hover { background: #f9f9f9; }
 
 #wp-powered-p { color: #ccc; }
 #wp-powered-p a { color: #ccc !important; }
-
-/* AUCTION IN A POST */
-
-.wpauction { background: #fff !important; border-top: 1px solid #ccc !important; color: #000 !important; font: normal 11px Verdana !important; padding-bottom: 15px !important; }
-.wpauction a { color: #0066FF !important; }
-.wpauction a:hover { color: #0033CC !important; text-decoration: none !important; }
-.wpauction h3, .wpauction h6 { font: normal 17px Verdana !important; text-align: center !important; padding: 5px !important; margin: 0 !important; text-transform: capitalize !important; }
-
-/* Headings */
-
-.wpauction h3 { border-bottom: 1px solid #ccc !important; margin-bottom: 15px !important; }
-
-/* Images */
-	
-.auctionimages { padding: 5px !important; margin-bottom: 5px !important; text-align: center !important; }
-.auctionimages img { background: #fff !important; border: 1px solid #ccc !important; display: inline !important; margin: 0 10px !important; padding: 0.059em !important; }
-
-/* Description */
-
-.auctiondescription { /* custom styles can come here */ padding: 5px 5px 0; !important; border-bottom: 1px solid #ccc !important; }
-.auctiondescription p { color: #000 !important; padding: 0 0 10px !important; }
-.auctiondescription ul { background: none !important; border: 0 !important; list-style: disc !important; margin: 0 0 10px 20px !important; }
-.auctiondescription ul li { background: none !important; border: 0 !important; font-size: 13px !important; margin: 0 !important; padding: 5px 0 !important; }
-.auctiondescription ol { margin: 0 0 10px 20px !important; }
-
-p.current-bid, p.refresh { background: #eee !important; text-align: center !important; font-size: 17px !important; color: #000 !important; padding: 5px !important; margin: 0 !important; border-bottom: 1px solid #fff !important; }
-p.refresh { font-size: 11px !important; margin-bottom: 15px !important; }
-p.current-bid:hover, p.refresh:hover { background: #ccc !important; cursor: default !important; }
-		
-/* Details */
-	
-.auctiondetails { /* custom styles come here */ }
-.auctiondetails h6 { background: #EEE !important; border: 0 !important; border-top: 1px solid #ccc !important; border-bottom: 1px solid #ccc !important; color: #333 !important; margin-bottom: 15px !important; }
-.auctiondetails ul { background: none !important; border: 0 !important; list-style: disc !important; padding: 0 !important; margin: 0 25px !important; }
-.auctiondetails ol { background: none !important; border: 0 !important; padding: 0 !important; margin: 0 0 0 35px !important; }
-.auctiondetails li { background: none !important; border: 0 !important; font-size: 13px !important; padding: 0 0 15px !important; margin: 0 !important; }
-.auctiondetails ol li { list-style: decimal !important; }
-		
-/* Fields and Buttons */
-	
-.bid-input { width: 14em !important; padding: 0.3em 0.2em !important; font-size: 0.9em !important; border: 1px solid #A7A6AA !important; letter-spacing: 1px !important; }
-.bid-input[type="text"]:focus{ border: 1px solid #000 !important; }
-.auction-button { padding: 0.3em 1em !important; font: normal 1em Georgia !important; background: #ddd !important; border-top: 1px solid #fff !important; border-left: 1px solid #fff !important; border-right: 1px solid #777 !important; border-bottom: 1px solid #777 !important; color: #222 !important; width: 13.1em !important; }
-.auction-button:hover { cursor: pointer !important; border-top: 1px solid #333 !important; border-left: 1px solid #333 !important; border-right: 1px solid #ccc !important; border-bottom: 1px solid #ccc !important; background: #ccc !important; color: #000 !important; }
-
-/* Tables */
-
-.auctiontables { background: #eee !important; border-top: 1px solid #ccc !important; margin: 0 !important; }
-.auctiontables h6 { background: none !important; border: 0 !important; color: #333 !important; }
-.auctiontables p { border-top: 1px solid #fff !important; padding: 10px !important; font-size: 11px !important; font-style: italic !important; margin: 0 !important; }
-.auctiontables span { font-size: 11pxem !important; text-align: center !important; display: block !important; padding: 0 0 5px !important; }
-.auctiontables table { background: #f1f1f1 !important; margin: 0 padding: 0 !important; border-bottom: 0 !important; border-top: 1px solid #fff !important; }
-.auctiontables td { padding: 5px 10px !important; border-bottom: 1px solid #fff !important; text-align: left !important; font-size: 12px !important; }
-.auctiontables tr:hover { background: #fff !important; }
