--- a/styles/Earth/color.css
+++ b/styles/Earth/color.css
@@ -246,3 +246,5 @@ p.current-bid:hover, p.refresh:hover { cursor: default !important; }
 .wpa-tables td img { background: #D3CCA3 url(gradient.png) repeat-x left bottom; display: block; margin: auto; padding: 5px; }
 .wpa-tables td a { background: #D3CCA3 url(gradient.png) repeat-x left bottom; border: 1px solid #463425; color: #660000; font-weight: bold; padding: 2px 8px; text-decoration: none; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
 .wpa-tables td a:hover { color: #463425; }
+
+header { z-index: 0 !important; }
